tests/fixtures/errors/interp_record.z
point: record {
    x: i64
    y: i64
}

main: function is {
    p: point x: 1 y: 2
    print "p=\{p} end"
}
