tests/fixtures/errors/interp_record.err
error[E0500]: zemitterc: unhandled interp part type point [line 8]
1 error found
